--- a/index.ipynb
+++ b/index.ipynb
@@ -44,13 +44,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Your code here\n",
     "def fib(n):\n",
-    "    return nth_number"
+    "    if n < 1:\n",
+    "        return \"N must be an integer greater than 1.\"\n",
+    "    elif n in [1,2]:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return fib(n-1) + fib(n-2)"
    ]
   },
   {
@@ -68,13 +73,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "def flat_list(L):\n",
-    "    return flattened"
+    "def flat_list(L, result=None, print_results=True):\n",
+    "    if result is None:\n",
+    "        result = []\n",
+    "    if print_results:\n",
+    "        print('Current L:', L)\n",
+    "    for i in L:\n",
+    "        if type(i) == list:\n",
+    "            flat_list(i, result)\n",
+    "        else:\n",
+    "            result.append(i)\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current L: [1, [2, 3, [4, 5, 6]], 7, [8], [9, 10]]\n",
+      "Current L: [2, 3, [4, 5, 6]]\n",
+      "Current L: [4, 5, 6]\n",
+      "Current L: [8]\n",
+      "Current L: [9, 10]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "L = [1,[2,3,[4,5,6]], 7, [8], [9,10]]\n",
+    "flat_list(L)"
    ]
   },
   {
@@ -87,12 +133,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Your answer here."
+    "#Your answer here.\n",
+    "The above is an example of a breadth first recursive call because it processed everything in layers before continuing down through nested lists."
    ]
   },
   {
@@ -106,9 +151,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -120,7 +165,49 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
